Update 'phkf7o14j-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe:ae2262a88965f5570c74132fbf9e6c0091998813@sha256:65db65513e7e5989df629dc2b0add2ace228a2010e41984c1e47d464d628f7b4

--- a/components/phkf7o14j-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/phkf7o14j-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: phkf7o14j-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:ae2262a88965f5570c74132fbf9e6c0091998813@sha256:65db65513e7e5989df629dc2b0add2ace228a2010e41984c1e47d464d628f7b4
+          name: container-image
